package edu.fiuba.algo3.Modelo;

public interface Sorpresa {
  void activar(Vehiculo vehiculo);
}